updating landing to old content

--- a/home.hbs
+++ b/home.hbs
@@ -1,4 +1,16 @@
-{{!< default}}
+{{!< project-templates/2017-projectTemplate}}
 
-<h1>Hello World from <code>spaceghost MK 0.0.1</code></h1>
-<p>Yeah, I know. this is rough. I'm using what seems to be a great starting place, the pale ghost theme by <a href="https://www.nahuelsanchez.com">Nahuel Sanchez</a> to get started with ghost. Watch this space, it's going to be dope.</p>
+{{!-- <h1>Hello World from <code>spaceghost MK 0.0.1</code></h1>
+<p>Yeah, I know. this is rough. I'm using what seems to be a great starting place, the pale ghost theme by <a href="https://www.nahuelsanchez.com">Nahuel Sanchez</a> to get started with ghost. Watch this space, it's going to be dope.</p> --}}
+
+<main class="master-content">
+  <section class="intro"><p>Hey – I’m Taurean Bryant, an Oakland, California-based designer from Brooklyn, New York.</p>
+
+    <p>When I’m not <a href="https://www.instagram.com/taurean_/" target="_blank">posting photos</a> of sneakers or life in California, I’m often ranting on <a href="https://twitter.com/_taurean" target="_blank">Twitter</a> about anything from hip-hop to the fermi paradox. The last thing I listened to <span class="last-fm-data"><span id="last-fm">can be found on <a href="#">my last.fm profile</a>.</span></span></p>
+
+    <p>Sometimes, I share snippets of my work on <a href="https://dribbble.com/taurean" target="_blank">dribbble</a>, <a href="https://codepen.io/taurean/" target="_blank">codepen</a>, and <a href="https://github.com/taurean" target="_blank">github</a>. </p>
+  </section>
+  <footer class="master-footer">
+    <span class="metal-hand">&#129304;</span>
+  </footer>
+</main>
